--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,11 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "io.coil-kt:coil-compose:1.4.0"
+
+    implementation "androidx.navigation:navigation-compose:2.5.0"
 }
