--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,20 @@ buildscript {
     ext {
         compose_version = '1.1.0-beta01'
     }
+
+    repositories {
+        google()
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.2'
+
+        // Add this line into `dependencies` in `buildscript`
+        classpath 'com.amplifyframework:amplify-tools-gradle-plugin:1.0.2'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
     id 'com.android.application' version '7.2.0' apply false
     id 'com.android.library' version '7.2.0' apply false
