Move apikey in local files and pass it through the interceptor

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-}
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false}
 
 android {
     compileSdk 32
@@ -17,6 +17,11 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        manifestPlaceholders = [tmdbApiKey: "${properties.getProperty('tmdbApiKey')}"]
+
     }
 
     buildTypes {
