--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     }
 
     repositories {
+        gradlePluginPortal()
         google()
         jcenter()
         mavenCentral()
