Add preview on Jetpack Compose screens

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
+    debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
+
     implementation 'com.amazon.device:amazon-appstore-sdk:3.0.3'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
